--- a/src/layout/default-layout.astro
+++ b/src/layout/default-layout.astro
@@ -1,7 +1,8 @@
 ---
+import "@/index.css";
+import "@fontsource-variable/inter";
 import Button from "@/components/ui/button.astro";
 import Github from "@/icon/github.astro";
-import "@/styles/global.css";
 import { Image } from "astro:assets";
 ---
 
@@ -13,34 +14,27 @@ import { Image } from "astro:assets";
     <meta name="generator" content={Astro.generator} />
     <title>fields4fs</title>
   </head>
-  <body class="min-h-screen bg-background font-sans antialiased">
-    <div id="dialog-teleport" class="relative flex min-h-screen flex-col">
-      <header
-        class="supports-backdrop-blur:bg-background/60 sticky top-0 z-40 w-full border-b bg-background/95 shadow-sm backdrop-blur"
-      >
-        <div class="container flex h-14 items-center">
-          <a href="/browse/0" class="mr-6 flex items-center space-x-2">
-            <Image src="/favicon.svg" width={24} height={24} alt="logo" />
-            <span class="font-bold">fields4fs</span>
-          </a>
+  <body class="bg-background min-h-screen font-sans antialiased">
+    <header class="bg-background sticky top-0 z-40 w-full border-b shadow-xs">
+      <div class="mx-auto flex h-14 w-full max-w-[1400px] items-center px-8">
+        <a href="/" class="mr-6 flex items-center space-x-2">
+          <Image src="/favicon.svg" width={24} height={24} alt="logo" />
+          <span class="font-semibold">fields4fs</span>
 
           <div class="flex flex-1 items-center justify-end space-x-2">
             <a href="https://github.com/daugvinasr/fields4fs" target="_blank">
               <Button type="button" size="icon" variant="ghost">
-                <Github class="h-5 w-5 flex-none fill-foreground" />
+                <Github class="fill-foreground h-5 w-5 flex-none" />
               </Button>
             </a>
           </div>
-        </div>
-      </header>
-
-      <div class="flex-1">
-        <div
-          class="container flex-1 items-start py-8 md:grid-cols-[220px_minmax(0,1fr)] md:gap-6 lg:grid-cols-[240px_minmax(0,1fr)] lg:gap-10"
-        >
-          <slot />
-        </div>
+        </a>
       </div>
-    </div>
+    </header>
+    <main
+      class="mx-auto w-full max-w-[1400px] flex-1 items-start px-8 py-8 md:grid-cols-[220px_minmax(0,1fr)] md:gap-6 lg:grid-cols-[240px_minmax(0,1fr)] lg:gap-10"
+    >
+      <slot />
+    </main>
   </body>
 </html>
