--- a/src/layout/default-layout.astro
+++ b/src/layout/default-layout.astro
@@ -15,7 +15,7 @@ import { Image } from "astro:assets";
     <title>fields4fs</title>
     <meta
       name="description"
-      content="Convert any densityMap_ground.png from FS25 to .i3d file with fields!"
+      content="Convert any densityMap_ground.png from Farming Simulator 25 to .i3d file with fields!"
     />
   </head>
   <body class="bg-background min-h-screen font-sans antialiased">
